--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "codyhouse-framework": "^3.0.14",
+    "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.13.1",
     "jsdom": "^25.0.1",
     "lucide-react": "^0.460.0",
