--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.13.1",
+    "heroicons": "^2.2.0",
     "jsdom": "^25.0.1",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
