--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "heroicons": "^2.2.0",
     "jsdom": "^25.0.1",
     "lucide-react": "^0.460.0",
+    "motion": "^12.6.2",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-intersection-observer": "^9.13.1",
     "react-youtube": "^10.1.0",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
